--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/ssr": "^20.3.6",
     "bootstrap": "^5.3.8",
     "express": "^5.1.0",
+    "ngx-toastr": "^19.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
