--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,10 @@
             ],
             "scripts": [],
             "server": "src/main.server.ts",
-            "outputMode": "static"
+            "outputMode": "server",
+            "ssr": {
+              "entry": "src/server.ts"
+            }
           },
           "configurations": {
             "production": {
